# python-pro-dz-6

./: .gitignore  manage.py  pyproject.toml
groups/: forms.py  models.py  urls.py  views.py
groups/migrations/: 0001_initial.py
pythonpro_dz_6/: asgi.py  settings.py  urls.py  wsgi.py
teachers/: models.py  urls.py  views.py
teachers/management/commands/: generate_teachers.py
teachers/migrations/: 0001_initial.py
templates/: all_groups.html  all_teachers.html  group.html  teacher.html
templates/extends/: header.html
