[tool.poetry]
name = "pythonpro-dz-6"
version = "0.1.0"
description = ""
authors = ["Serhii Romanenko <sergromanenko97@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonpro_dz_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
faker = "^18.4.0"

[tool.poetry.dev-dependencies]
black = {git = "https://github.com/psf/black"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
